# glthing

./: .gitignore  Makefile.am  configure.ac  glthing.c  vertex-shader.glsl
src/: Makefile.am  fragment-shader.glsl  gol-paint-fragment.glsl  gol-update-fragment.glsl  gol-update-vertex.glsl  gol.c  gol.h  main.c  shader-data.c  shader-data.h  vertex-shader.glsl
